# all2md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXIT_CODES.md  FEATURE_SUMMARY.md  PROGRESS_CALLBACKS.md  README.md  ROADMAP.md  SECURITY.md  TRANSFORMS.md  demo.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  release.yml  update-snapshots.yml
benchmarks/: startup.py
benchmarks/corpus/: README.md  benchmark.py  corpus.toml  download.py  inspect.py  report.py  run.py
benchmarks/reference/: 3516bc9-optimized.json  3516bc9-optimized.md  README.md  b0e4224-baseline.json  b0e4224-baseline.md
benchmarks/roundtrip/: README.md  __init__.py  __main__.py  corpus.py  oracles.py  run.py
docs/: fix_rst_filenames.py  make.bat  test.bat
docs/source/: _generated_formats.rst.inc  _options-narrative.rst  agent_skills.rst  architecture.rst  ast_guide.rst  attachments.rst  batch.rst  bidirectional.rst  cheatsheet.rst  cli.rst  conf.py  configuration.rst  contributing.rst  environment_variables.rst  formats.rst  generate_options_doc.py  index.rst  installation.rst  integrations.rst  license.rst  lint_guide.rst  mcp.rst  optimizations.rst  options.rst  overview.rst  performance.rst  plugins.rst  python_api.rst  quickstart.rst  recipes.rst  security.rst  static_sites.rst  templates.rst  threat_model.rst  transforms.rst  troubleshooting.rst  usage.rst  viewer.rst
examples/: FLASK_SITE_README.md  LLM_TRANSLATION_EXAMPLE.md  README.md  api_doc_extractor.py  batch_converter.py  code_example_generator.py  document_sanitizer.py  flask_markdown_site.py  jinja_template_demo.py  link_checker.py  llm_translation_demo.py  progress_callback_demo.py  study_guide_generator.py
examples/cli/: README.md  batch-convert.ps1  batch-convert.sh  convert-and-pipe.ps1  convert-and-pipe.sh  diff-in-ci.ps1  diff-in-ci.sh  extract-and-navigate.ps1  extract-and-navigate.sh  grep-binary-docs.ps1  grep-binary-docs.sh  llm-minify-pipe.ps1  llm-minify-pipe.sh  rag-ingest.ps1  rag-ingest.sh  search-corpus.ps1  search-corpus.sh
examples/flask-site-content/: about.md  index.md
examples/jinja-templates/: ansi-terminal.txt.jinja2  docbook.xml.jinja2
examples/llm/: _llm_client.py  code_example_generator.py  llm_translation_demo.py  search_to_llm_rag.py  study_guide_generator.py
examples/python/: api_doc_extractor.py  ast_json_roundtrip.py  batch_converter.py  document_sanitizer.py  progress_callback_demo.py  transforms_by_name.py
examples/simpledoc-plugin/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/simpledoc-plugin/examples/: demo.py  sample.sdoc
examples/simpledoc-plugin/src/all2md_simpledoc/: __init__.py  options.py  parser.py  renderer.py
examples/simpledoc-plugin/tests/: test_simpledoc.py
examples/templates/: jinja_template_demo.py
examples/vcs-converter/: .gitignore.template  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  OVERVIEW.md  QUICKSTART.md  README.md  README_SNIPPET.md  install_hook.py  setup.sh  vcs-converter.config.json  vcs_converter.py
examples/watermark-plugin/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/watermark-plugin/src/all2md_watermark/: __init__.py  transforms.py
examples/watermark-plugin/tests/: test_watermark.py
examples/web/: flask_markdown_site.py
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: README.md  fix_rst_filenames.py  generate_converter_manifest.py  generate_formats_doc.py  generate_ico.py  generate_options_doc.py  install-menu.ps1  install.ps1  install.sh  pre-commit-format-sync.sh  update_document_formats.py
skills/all2md-convert/: SKILL.md
skills/all2md-search/: SKILL.md
skills/all2md-view-diff/: SKILL.md
src/all2md/: __init__.py  __main__.py  _attachment_utils.py  _converter_manifest.py  _input_utils.py  _plaintext-exts.json  api.py  cli.py  cli_builder.py  cli_processors.py  confidence.py  constants.py  conversion_cache.py  converter_metadata.py  converter_registry.py  dependencies.py  docx2markdown.py  emlfile.py  exceptions.py  html2markdown.py  ipynb2markdown.py  logging_utils.py  optimize.py  options.py  pdf2markdown.py  pptx2markdown.py  progress.py  roundtrip.py  rtf2markdown.py
src/mdparse/: __init__.py  _input_utils.py  constants.py  docx2markdown.py  emlfile.py  exceptions.py  html2markdown.py  markdown2docx.py  markdown2pdf.py  options.py  pdf2image.py  pdf2markdown.py  pptx2markdown.py
stubs/docx/: __init__.pyi  shared.pyi  table.pyi
stubs/pptx/: __init__.pyi  presentation.pyi  slide.pyi  table.pyi  util.pyi
tests/: conftest.py  pdf_test_fixtures.py  test_architecture_verification.py  test_docx2markdown.py  test_docx_escaping.py  test_docx_images_advanced.py  test_eml_multipart.py  test_emlfile.py  test_html2markdown.py  test_html_entities.py  test_html_tables_advanced.py  test_integration.py  test_markdown2docx.py  test_pdf2image.py  test_pdf2markdown.py  test_pdf_images_integration.py  test_pdf_images_old.py.bak  test_pdf_tables_advanced_old.py.bak  test_pdf_tables_integration.py  test_pptx2markdown.py  test_pptx_charts_advanced.py  utils.py
tests/e2e/: test_api_functions_e2e.py  test_api_workflows.py  test_batch_cli.py  test_cli.py  test_cli_e2e.py  test_completion_cli.py  test_config_cli.py  test_deps_cli.py  test_diff_cli.py  test_edit_cli.py  test_exit_codes.py  test_extract_cli.py  test_formats_cli.py  test_full_conversion_pipeline.py  test_generate_site_cli.py  test_outline_cli.py  test_search_cli.py  test_serve_cli.py  test_slice_lines_cli.py  test_transform_cli.py  test_view_cli.py
tests/fixtures/: README.md  __init__.py
tests/golden/: __init__.py  test_docx_golden.py  test_generated_fixtures_golden.py  test_html_golden.py  test_misc_formats_golden.py  test_openapi_golden.py  test_other_formats_golden.py  test_pdf_golden.py  (+3 more)
tests/unit/: test_cli.py  (+101 more)
(+1093 files in other folders)
