[project]
name = "all2md"
version = "0.1.0"
description = "Rapid, lightweight conversion of various document formats to markdown for LLMs"
readme = "README.md"
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = [{ include = "all2md", from = "src" }]

[tool.hatch.build.targets.sdist]
include = ["src/**", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.metadata]
include = [
    "src/all2md/_plaintext-exts.json",
]

[project.optional-dependencies]
odf = [
    "odfpy>=1.4.1",
]
pdf = [
    "pymupdf>=1.26.4"
]
docx = [
    "python-docx>=1.2.0"
]
pptx = [
    "python-pptx>=1.0.2",
]
rtf = [
    "pyth3>=0.7",
]
html = [
    "beautifulsoup4>=4.13.5",
    "httpx>=0.28.1",
]
all = [
    "beautifulsoup4>=4.13.5",
    "httpx>=0.28.1",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pymupdf>=1.26.4",
    "pyth3>=0.7",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-copybutton>=0.5.2",
    "pytest-cov>=7.0.0",
]
epub = [
    "ebooklib>=0.19",
]
cli_extras = [
    "rich>=14.1.0",
    "tqdm>=4.66.0",
]
spreadsheet = [
    "openpyxl>=3.1.5",
]


[project.scripts]
all2md = "all2md.cli:main"

[project.entry-points."all2md.converters"]
# Entry points for third-party converter plugins
# Example for a hypothetical third-party plugin:
# visio = "all2md_visio.converter:CONVERTER_METADATA"

[project.entry-points."all2md.transforms"]
# Built-in transforms
remove-images = "all2md.transforms._builtin_metadata:REMOVE_IMAGES_METADATA"
remove-nodes = "all2md.transforms._builtin_metadata:REMOVE_NODES_METADATA"
heading-offset = "all2md.transforms._builtin_metadata:HEADING_OFFSET_METADATA"
link-rewriter = "all2md.transforms._builtin_metadata:LINK_REWRITER_METADATA"
text-replacer = "all2md.transforms._builtin_metadata:TEXT_REPLACER_METADATA"
add-heading-ids = "all2md.transforms._builtin_metadata:ADD_HEADING_IDS_METADATA"
remove-boilerplate = "all2md.transforms._builtin_metadata:REMOVE_BOILERPLATE_METADATA"
add-timestamp = "all2md.transforms._builtin_metadata:ADD_TIMESTAMP_METADATA"
word-count = "all2md.transforms._builtin_metadata:WORD_COUNT_METADATA"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Target Python version
target-version = "py312"
# Maximum line length (compatible with black)
line-length = 120

# Exclude some common directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

# Enable fixing issues automatically when possible
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes errors
    "W",  # pycodestyle warnings
    "C",  # complexity checks
    "B",  # flake8-bugbear
    "I",  # import-related rules
]
ignore = [
    "C901"
]


[tool.mypy]
# Python version to check against
python_version = 3.12

# Paths to ignore (similar to ruff exclude)
exclude = "build|dist|.venv|.mypy_cache"

# Enable strict optional checking
strict_optional = true

# Disallow untyped function definitions
disallow_untyped_defs = true

# Disallow untyped calls
disallow_untyped_calls = true

# Disallow untyped decorators
disallow_untyped_decorators = true

# Warn about unused ignores
warn_unused_ignores = true

# Warn about unreachable code
warn_unreachable = true

# Show error codes in output
show_error_codes = true

# Ignore missing imports (useful if some dependencies lack type hints)
ignore_missing_imports = true

# Follow imports normally (can be changed to silent if needed)
follow_imports = "normal"

# Cache directory
cache_dir = ".mypy_cache"
