[project]
name = "all2md"
version = "0.1.0"
description = "Rapid, lightweight conversion of various document formats to markdown for LLMs"
readme = "README.md"
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tomli-w>=1.0.0",  # For writing TOML config files (tomllib in stdlib is read-only)
]

[tool.hatch.build.targets.wheel]
packages = ["src/all2md"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.metadata]
include = [
    "src/all2md/_plaintext-exts.json",
]

[project.optional-dependencies]
odf = [
    "odfpy>=1.4.1",
]
pdf = [
    "pymupdf>=1.26.5"
]
docx = [
    "python-docx>=1.2.0"
]
pptx = [
    "python-pptx>=1.0.2",
]
rtf = [
    "pyth3>=0.7",
    "six>=1.16.0"

]
html = [
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "httpx>=0.28.1",
]
html_readability = [
    "readability-lxml>=0.8.1",
]
sanitizer = [
    "bleach>=6.2.0",
]
latex = [
    "pylatexenc>=2.10",
]
chm = [
#    "pychm>=0.8.6"
]
dev = [
    "all2md[all]",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "black>=25.9.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-copybutton>=0.5.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.100.0",
    "syrupy>=4.6.0",
    "types-Pillow",
    "types-beautifulsoup4",
    "types-lxml",
    "types-docutils",
    "types-reportlab",
]
epub = [
    "ebooklib>=0.19",
]
cli_extras = [
    "rich>=14.2.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
]
spreadsheet = [
    "openpyxl>=3.1.5",
]
markdown = [
    "mistune>=3.0.0",
]
pdf_render = [
    "reportlab>=4.0.0",
]
docx_render = [
    "python-docx>=1.2.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
templates = [
    "jinja2>=3.1.0",
]
rst = [
    "docutils>=0.20",
]
org = [
    "orgparse>=0.4.20250520",
]
archive = [
    "py7zr>=0.22.0",
    "rarfile>=4.2",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
]

all = [
    "beautifulsoup4>=4.14.2",
    "chardet>=5.2.0",
    "readability-lxml>=0.8.1",
    "docutils>=0.20",
    "ebooklib>=0.19",
    "fastmcp>=2.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "mistune>=3.0.0",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "orgparse>=0.4.20250520",
    "py7zr>=0.22.0",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pyth3>=0.7",
    "pylatexenc>=2.10",
    "rarfile>=4.2",
    "reportlab>=4.0.0",
    "rich>=14.2.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
]
wiki = [
    "mwparserfromhell>=0.7.2",
]

[project.scripts]
all2md = "all2md.cli:main"
all2md-mcp = "all2md.mcp.server:main"

[project.entry-points."all2md.converters"]
# Entry points for third-party converter plugins
# Example for a hypothetical third-party plugin:
# visio = "all2md_visio.converter:CONVERTER_METADATA"

[project.entry-points."all2md.transforms"]
# Built-in transforms
remove-images = "all2md.transforms._builtin_metadata:REMOVE_IMAGES_METADATA"
remove-nodes = "all2md.transforms._builtin_metadata:REMOVE_NODES_METADATA"
heading-offset = "all2md.transforms._builtin_metadata:HEADING_OFFSET_METADATA"
link-rewriter = "all2md.transforms._builtin_metadata:LINK_REWRITER_METADATA"
text-replacer = "all2md.transforms._builtin_metadata:TEXT_REPLACER_METADATA"
add-heading-ids = "all2md.transforms._builtin_metadata:ADD_HEADING_IDS_METADATA"
remove-boilerplate = "all2md.transforms._builtin_metadata:REMOVE_BOILERPLATE_METADATA"
add-timestamp = "all2md.transforms._builtin_metadata:ADD_TIMESTAMP_METADATA"
word-count = "all2md.transforms._builtin_metadata:WORD_COUNT_METADATA"
add-attachment-footnotes = "all2md.transforms._builtin_metadata:ADD_ATTACHMENT_FOOTNOTES_METADATA"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Target Python version
target-version = "py312"
# Maximum line length (compatible with black)
line-length = 120

# Exclude some common directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "examples"
]

# Enable fixing issues automatically when possible
fix = true

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes errors
    "W",  # pycodestyle warnings
    "C",  # complexity checks
    "B",  # flake8-bugbear
    "I",  # import-related rules
]
ignore = [
#    "C901",  # complexity (ignoring for now)
    "D203",  # one-blank-line-before-class (incompatible with D211)
    "D213",  # multi-line-summary-second-line (incompatible with D212)
]
[tool.ruff.lint.mccabe]
max-complexity = 15

# Relax rules for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D301",  # Use r prefix for docstrings with backslashes
    "D401",  # First line should be in imperative mood
    "B017",  # assertRaises(Exception) considered evil
    "E402",  # Module level import not at top (common with pytest.skip)
    "E501",  # Line too long (tests often have long assertion lines)
]


[tool.mypy]
# Python version to check against
python_version = 3.12

# Path to custom stub files
mypy_path = "stubs"

# Paths to ignore (similar to ruff exclude)
exclude = "build|dist|.venv|.mypy_cache|examples"

# Enable strict optional checking
strict_optional = true

# Disallow untyped function definitions
disallow_untyped_defs = true

# Disallow untyped calls
disallow_untyped_calls = true

# Disallow untyped decorators
disallow_untyped_decorators = true

# Warn about unused ignores
warn_unused_ignores = true

# Warn about unreachable code
warn_unreachable = true

# Show error codes in output
show_error_codes = true

# Ignore missing imports (useful if some dependencies lack type hints)
ignore_missing_imports = true

# Follow imports normally (can be changed to silent if needed)
follow_imports = "normal"

# Cache directory
cache_dir = ".mypy_cache"

# Override settings for python-docx - use our custom stubs
[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = false

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '\.git|\.mypy_cache|\.pytest_cache|build|dist'
skip-string-normalization = false
