# Dependency manifest for the all2md MCPB bundle.
#
# The MCPB `uv` runtime reads this file and installs the declared dependency on
# the user's machine at install time, so no packages are bundled in the .mcpb.
#
# Versions here are kept in sync with the main package by the root pyproject's
# [tool.bumpversion] config — do NOT hand-edit the version strings below.
[project]
name = "all2md-mcpb"
version = "1.3.0"
requires-python = ">=3.10"
dependencies = [
    "all2md[mcp,pdf,pdf_render,docx,html,xlsx,pptx,epub,rst,markdown,odf]>=1.3.0",
]
