# Dependency manifest for the all2md MCPB bundle.
#
# The MCPB `uv` runtime reads this file and installs the declared dependency on
# the user's machine at install time, so no packages are bundled in the .mcpb.
#
# Versions here are kept in sync with the main package by the root pyproject's
# [tool.bumpversion] config — do NOT hand-edit the version strings below.
[project]
name = "all2md-mcpb"
version = "1.8.0"
requires-python = ">=3.10"
dependencies = [
    "all2md[mcp,pdf,pdf_render,docx,html,xlsx,pptx,epub,rst,markdown,odf]>=1.8.0",
    # The search_documents MCP tool defaults to keyword (BM25) mode, which needs
    # rank-bm25. Depend on it directly rather than via the `search` extra: that
    # extra also pulls faiss-cpu and sentence-transformers for vector/hybrid
    # search, which the MCP server rejects, so they would only bloat the bundle.
    "rank-bm25>=0.2.2",
]
