[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "all2md-simpledoc"
version = "1.0.0"
description = "SimpleDoc format plugin for all2md - demonstrates bidirectional document conversion"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "All2md Contributors", email = "example@example.com"}
]
keywords = ["all2md", "markdown", "converter", "plugin", "simpledoc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "all2md>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/all2md-simpledoc"
Repository = "https://github.com/yourusername/all2md-simpledoc.git"
Issues = "https://github.com/yourusername/all2md-simpledoc/issues"

# Entry point for plugin discovery
[project.entry-points."all2md.converters"]
simpledoc = "all2md_simpledoc:CONVERTER_METADATA"

[tool.hatch.build.targets.wheel]
packages = ["src/all2md_simpledoc"]
